top-carousel min-height

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <nav id="top-menu" class="container"></nav>
     </header>
 <main role="main" class="container-fluid">
-    <section style="min-height: 333px;"></section>
+    <section class="top-carousel"></section>
     <section class="row alter-n8" b-top flex-grow>
         <div class="container paper-sheet">
             <div class="row">
