--- a/index.html
+++ b/index.html
@@ -9,68 +9,20 @@
 
     <title>poezie.ro - v21</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/poezie-ro.css" rel="stylesheet">
+    <link href="/assets/css/poezie-ro.css" rel="stylesheet">
 
 </head>
 <body>
-<!--<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
-</nav>-->
-<header>
-    <nav id="top-menu" class="container"></nav>
-    </header>
-<main role="main" class="container-fluid">
-    <section class="top-carousel"></section>
-    <section class="row alter-n8" b-top flex-grow>
-        <div class="container paper-sheet">
-            <div class="row">
-                <div class="col-12">
-                    <div class="spacer" style="min-height: 100px;"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-</main><!-- /.container -->
-<footer></footer>
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
+<header data-include-html="/layout/header.html"></header>
+<main role="main" data-include-html="getCurrentPage" class="container-fluid d-block"></main>
+<footer data-include-html="/layout/footer.html"></footer>
+
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/lodash/lodash.min.js"></script>
 <script>window.jQuery || document.write('<script src="/node_modules/jquery/dist/jquery.slim.min.js"><\/script>')</script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="assets/js/top-menu.js"></script>
+<script src="/assets/js/poezie-ro.js"></script>
 </body>
 </html>
